Added Tutorial button for Table Schedule

--- a/Class-Schedule/index.html
+++ b/Class-Schedule/index.html
@@ -7,68 +7,71 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+
+	<a href="index.html">Tutorial/Test HTML Table</a>
+	<br>
     
-		<table border="2" cellpadding="5">
-			<tr>
-				<th></th>
-				<th><b>Monday</b></th>
-				<th><b>Tuesday</b></th>
-				<th><b>Wednesday</b></th>
-				<th><b>Thursday</b></th>
-				<th><b>Friday</b></th>
-			</tr>
+	<table border="2" cellpadding="5">
+		<tr>
+			<th></th>
+			<th><b>Monday</b></th>
+			<th><b>Tuesday</b></th>
+			<th><b>Wednesday</b></th>
+			<th><b>Thursday</b></th>
+			<th><b>Friday</b></th>
+		</tr>
 
-			<!-- Times -->
-			<tr>
-				<td> <b>1:00</b> </td>
-				<td rowspan="2" align="center" bgcolor="orange">Office</td>
-				<td></td>
-				<td rowspan="2" align="center" bgcolor="orange">Office</td>
-				<td rowspan="8" align="center" bgcolor="orange">Office Hours by Appt</td>
-				<td rowspan="2" align="center" bgcolor="orange">Office</td>
-			</tr>
-			
-			<tr> 
-				<td> <b>1:30</b> </td>
-				<td rowspan="2" align="center" bgcolor="lightgray">Dept Meeting</td>
-			</tr>
-			
-			<tr> 
-				<td> <b>2:00</b> </td>
-				<td rowspan="3" align="center" bgcolor="lightgreen">MAT 108</td>`
-				<td rowspan="3" align="center" bgcolor="lightgreen">MAT 108</td>
-				<td rowspan="3" align="center" bgcolor="lightgreen">MAT 108</td>
-			</tr>
-			
-			<tr> 
-				<td> <b>2:30</b> </td>
-			</tr>
-			
-			<tr> 
-				<td> <b>3:00</b> </td>
-				<td rowspan="2" align="center" bgcolor="lightgray">EC Meeting</td>
-			</tr>
-			
-			<tr> 
-				<td> <b>3:30</b> </td>
-				<td rowspan="3" align="center" bgcolor="pink">CSC 205</td>
-				<td rowspan="3" align="center" bgcolor="pink">CSC 205</td>
-				<td rowspan="3" align="center" bgcolor="pink">CSC 205</td>
-			</tr>
-			
-			<tr> 
-				<td> <b>4:00</b> </td>
-			
-			</tr>
-			
-			<tr> 
-				<td> <b>4:30</b> </td>
-			
-			</tr>
+		<!-- Times -->
+		<tr>
+			<td> <b>1:00</b> </td>
+			<td rowspan="2" align="center" bgcolor="orange">Office</td>
+			<td></td>
+			<td rowspan="2" align="center" bgcolor="orange">Office</td>
+			<td rowspan="8" align="center" bgcolor="orange">Office Hours by Appt</td>
+			<td rowspan="2" align="center" bgcolor="orange">Office</td>
+		</tr>
+		
+		<tr> 
+			<td> <b>1:30</b> </td>
+			<td rowspan="2" align="center" bgcolor="lightgray">Dept Meeting</td>
+		</tr>
+		
+		<tr> 
+			<td> <b>2:00</b> </td>
+			<td rowspan="3" align="center" bgcolor="lightgreen">MAT 108</td>
+			<td rowspan="3" align="center" bgcolor="lightgreen">MAT 108</td>
+			<td rowspan="3" align="center" bgcolor="lightgreen">MAT 108</td>
+		</tr>
+		
+		<tr> 
+			<td> <b>2:30</b> </td>
+		</tr>
+		
+		<tr> 
+			<td> <b>3:00</b> </td>
+			<td rowspan="2" align="center" bgcolor="lightgray">EC Meeting</td>
+		</tr>
+		
+		<tr> 
+			<td> <b>3:30</b> </td>
+			<td rowspan="3" align="center" bgcolor="pink">CSC 205</td>
+			<td rowspan="3" align="center" bgcolor="pink">CSC 205</td>
+			<td rowspan="3" align="center" bgcolor="pink">CSC 205</td>
+		</tr>
+		
+		<tr> 
+			<td> <b>4:00</b> </td>
+		
+		</tr>
+		
+		<tr> 
+			<td> <b>4:30</b> </td>
+		
+		</tr>
 
 
 
-		</table>
+	</table>
 
   <script src="script.js"></script>
   </body>
