--- a/Class-Schedule/index.html
+++ b/Class-Schedule/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-	<a href="index.html">Tutorial/Test HTML Table</a>
+	<a href="tutorial.html">Tutorial/Test HTML Table</a>
 	<br>
     
 	<table border="2" cellpadding="5">
