Updated 403 and 404 for titles

--- a/403-Page/index.html
+++ b/403-Page/index.html
@@ -1,8 +1,18 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Error 403 - Access Forbidden</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <script src="script.js"></script>
 
-<link href="style.css" rel="stylesheet" type="text/css" />
-<script src="script.js"></script>
-
-<div class="container">
-    <h1>4<div class="lock"><div class="top"></div><div class="bottom"></div>
-        </div>3</h1><p>Access Forbidden</p>
-</div>
+    <div class="container">
+        <h1>4<div class="lock"><div class="top"></div><div class="bottom"></div>
+            </div>3</h1><p>Access Forbidden</p>
+            <p>You do not have access to view this page you requested.</p>
+    </div>
+  </body>
+</html>
