--- a/404-Page/index.html
+++ b/404-Page/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Daily UI #008 - 404 Page</title>
+  <title>Error 404 - Page Not Found</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
