Removed iFrame and added ThankYou.html with URL parsing

--- a/Forms-Practice/index.html
+++ b/Forms-Practice/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>replit</title>
+    <title>Forms Practice - Log In</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
 		<script src="script.js"></script>
-    <form action="https://www.google.com">
+    <form action="ThankYou.html">
 		<p>First name: <br></p>
 		<input type="text" name="firstname"  id="firstname"  required><br>
 		<p>Last name: <br></p>
 		<input type="text" name="lastname"   id = "lastname" required><br>
 		<p>Birth Date: <br></p>
 		<input type="date" name="birth-date" id="birth-date" required><br>
-		<br>
+		  
 		<input type="submit" name="Submit" onclick="checkForm()" required><br>
     </form>
 		
