--- a/Frames-Video-Audio-ExternalCSS:Practice/index.html
+++ b/Frames-Video-Audio-ExternalCSS:Practice/index.html
@@ -8,6 +8,11 @@
   </head>
   <body>
       <h1>Frames, Video, Audio and External-CSS Practice</h1>
-      
+      <h2>Audio</h2>
+      <p> <b>Horse Sound</b></p>
+      <br>
+      <audio controls="controls" preload="auto" >
+        <source src="horse.mp3" type="audio/mpg">
+      </audo>
   </body>
 </html>
