Updated to favicon

--- a/About-Me/index.html
+++ b/About-Me/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Jacob Trentini - About Me</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+	<link rel="icon" href="/fav.png" type="image/x-icon">
   </head>
 
   <body style="background-color: black; border: 5px dotted; border-color: lime">
