--- a/Frames,Video,Audio,ExternalCSS-Practice/index.html
+++ b/Frames,Video,Audio,ExternalCSS-Practice/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Frames/Video/Audio/External-CSS: Practice</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="icon" href="/fav.png" type="image/x-icon">
   </head>
   <body>
       <h1>Frames, Video, Audio and External-CSS: Practice</h1>
