--- a/Registration-Form/index.html
+++ b/Registration-Form/index.html
@@ -3,13 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Forms Practice - Thank You</title>
+    <title>Calculator</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link rel="icon" href="/fav.png" type="image/x-icon">
   </head>
   <body>
-    <h1 id="combinedname">Your Name is: </h1>
-    <h3>We hope to see you in the future!</h3>
-    <script src="ThankYou.js"></script>
+
   </body>
 </html>
