--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Calculator</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="icon" href="/fav.png" type="image/x-icon">
   </head>
   <body>
       <center><h1>Simple Calculator</h1></center>
