--- a/Class-Schedule/index.html
+++ b/Class-Schedule/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Class Schedule</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+	<link rel="icon" href="/fav.png" type="image/x-icon">
   </head>
   <body>
 
