--- a/Class-Schedule/tutorial.html
+++ b/Class-Schedule/tutorial.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Tutorial Table</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+	<link rel="icon" href="/fav.png" type="image/x-icon">
   </head>
   <body>
 		<table border="2">
