--- a/Forms-Practice/index.html
+++ b/Forms-Practice/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Forms Practice - Log In</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="icon" href="/fav.png" type="image/x-icon">
   </head>
   <body>
 		<script src="script.js"></script>
