--- a/JavaScript-Practice/index.html
+++ b/JavaScript-Practice/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>JavaScript Practice</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="icon" href="/fav.png" type="image/x-icon">
   </head>
   <body>
       <p>JavaScript can change HTML attribute values.</p>
