--- a/Practice-From-Slides/thankyou.html
+++ b/Practice-From-Slides/thankyou.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>replit</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />		
+    <link href="style.css" rel="stylesheet" type="text/css" />	
+	<link rel="icon" href="/fav.png" type="image/x-icon">	
 		<style>
 			p {
 				font-style: italic;
