Updated to favicon and fixed Practice from slides thank you style page

--- a/Practice-From-Slides/thankyou.html
+++ b/Practice-From-Slides/thankyou.html
@@ -20,7 +20,7 @@
 	</head>
   <body style="background-color: plum ; border: 5px dotted ; border-color: lime">
 		<div style="background-color: darkened">
-			<h1 "style=center"> <center>Thank you for choosing Us</center>
+			<h1 "style=center;"> <center>Thank you for choosing Us</center>
 		</div>
 		
 	<h1 div style="background-color: yellow" style="color: blue">Heading</h1>
@@ -34,6 +34,7 @@
 	</h1>
 
 	<h2>Hello World</h2>
-	<p style="font-family = arial; font-side = 200%; color = green">Hello World</p>
+	<p style="font-family=arial; font-side=200%; color=green">Hello World</p>
 
   </body>
+</html>
