--- a/Practice-From-Slides/index.html
+++ b/Practice-From-Slides/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>replit</title>
+    <title>Practice From Slides - Home</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
 	<link rel="icon" href="/fav.png" type="image/x-icon">
   </head>
