--- a/Practice-From-Slides/thankyou.html
+++ b/Practice-From-Slides/thankyou.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>replit</title>
+    <title>Practice From Slides - Thank You</title>
     <link href="style.css" rel="stylesheet" type="text/css" />	
 	<link rel="icon" href="/fav.png" type="image/x-icon">	
 		<style>
@@ -19,13 +19,13 @@
 		</style>
 	</head>
   <body style="background-color: plum ; border: 5px dotted ; border-color: lime">
-		<div style="background-color: darkened">
-			<h1 "style=center;"> <center>Thank you for choosing Us</center>
-		</div>
+	<div style="background-color: darkened">
+		<center><h1>Thank you for choosing Us</h1></center>
+	</div>
 		
-	<h1 div style="background-color: yellow" style="color: blue">Heading</h1>
+	<h1 div style="background-color: yellow;" style="color: blue">Heading</h1>
 
-	<div style="background-color:blue"
+	<div style="background-color:blue">
 		<h1 style="color: yellow">Heading</h1>
 	</div>
 
@@ -34,7 +34,7 @@
 	</h1>
 
 	<h2>Hello World</h2>
-	<p style="font-family=arial; font-side=200%; color=green">Hello World</p>
+	<p style="font-family: arial; font-size: 200%; color: green">Hello World</p>
 
   </body>
 </html>
