Fixed Image Paths

--- a/Registration-Form/index.html
+++ b/Registration-Form/index.html
@@ -13,7 +13,7 @@
     <center><h1>Registration Form</h1></center>
 
     <center><div>
-      <img src="Registration-Form/StratfordSchool.png" alt="Stratford School Logo" length="300" width="300"></div>
+      <img src="StratfordSchool.png" alt="Stratford School Logo" length="300" width="300"></div>
       <h2 style="padding: 10px">Welcome to the Stratford Parent Community Site</h3>
 
       <br>
