Fixed Lightbulb code

--- a/JavaScript-Practice/index.html
+++ b/JavaScript-Practice/index.html
@@ -8,13 +8,13 @@
   </head>
   <body>
       <p>JavaScript can change HTML attribute values.</p>
-      <p id="demo">Light bulb is off</p>
 
       <button type="button" onclick="myFunction()">Click here to change HTML attribute values.</button><br>
       <button type="button" onclick="toggleBulbState()">Click here to toggle the bulb's state.</button><br><br>
 
       <img id="bulb" src="bulbOff.png" style="width: 100px">
-
+      <br>
+      <span>the bulb is </span><span style="background-color: yellow;" id="status">OFF</span>
       <script src="script.js"></script>
   </body>
 </html>
