--- a/JavaScript-Practice/index.html
+++ b/JavaScript-Practice/index.html
@@ -7,10 +7,10 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-      <p>JavaScript can change HTML attribute values.</p>
+      <p id="demo">JavaScript can change HTML attribute values.</p>
 
-      <button type="button" onclick="myFunction()">Click here to change HTML attribute values.</button><br>
-      <button type="button" onclick="toggleBulbState()">Click here to toggle the bulb's state.</button><br><br>
+      <button type="button" onclick="myFunction()">Click here to change HTML attribute values</button><br>
+      <button type="button" onclick="toggleBulbState()">Click here to toggle the bulb's state</button><br><br>
 
       <img id="bulb" src="bulbOff.png" style="width: 100px">
       <br>
