Fixed capitalization within JavaScript-Practice

--- a/JavaScript-Practice/index.html
+++ b/JavaScript-Practice/index.html
@@ -14,7 +14,7 @@
 
       <img id="bulb" src="bulbOff.png" style="width: 100px">
       <br>
-      <span>the bulb is </span><span style="background-color: yellow;" id="status">OFF</span>
+      <span>The bulb is </span><span style="background-color: yellow;" id="status">OFF</span>
       <script src="script.js"></script>
   </body>
 </html>
