--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
       <center><h1>Simple Calculator</h1></center>
-      <form>
+      <form style="padding-left: 50px;">
           <input type="text" id="value1" placeholder="Enter First Value"><br>
           <input type="text" id="value2" placeholder="Enter Second Value"><br>
           <br>
