--- a/Jeopardy/index.html
+++ b/Jeopardy/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Jeopardy | Home</title>
     <link href="https://assets.cdn.awesomeplayer.tech/hPmIIEzkASLcRfGCIGHe/roboto.min.css" rel="stylesheet" type="text/css" />	
+    <!-- <link href="css/hover" rel="stylesheet" type="text/css" /> -->
     <link href="css/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body></body>
