Finished Jeopardy and added LA Questions

--- a/Jeopardy/Question/index.html
+++ b/Jeopardy/Question/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>Jeopardy | Question</title>
+        <link href="../css/linkhover.css" rel="stylesheet" type="text/css" />
         <link href="../css/style.css" rel="stylesheet" type="text/css" />
         <!-- <link href="../css/modal.min.css" rel="stylesheet" type="text/css" /> -->
 
@@ -11,11 +12,9 @@
     </head>
     <body>
 
-        <a href="../">Back to Home</a>
-
-        <h1 id="question">Question: </h2>
-        <h2 id="subject">Subject: </h1>
-        <h3 id="points">Number of Points: </h3>
+        <h2 id="question">Question: </h2>
+        <h3 id="subject">Subject: </h1>
+        <h4 id="points">Number of Points: </h3>
 
         <button type="submit" onclick="showAnswer()">Show Answer</button>
         <script src="../js/answer.js"></script>
